...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/svg_logout_button"
        app:layout_constraintBottom_toTopOf="@+id/tasksList"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <ImageView
...
